# reportly

./: .claudeignore  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.json
.claude/commands/: add-command.md  add-decision.md  add-skill.md  code-review.md  commit.md  create-pr.md  deep-context.md  execute-prp.md  fix-bug.md  generate-prp.md  pr-comment.md  setup-context.md
.claude/scripts/: notify.sh  statusline.sh  tool-failure-guard.sh
.claude/skills/: README.md
.context/: CONTEXT.md
.context/decisions/: 001-tauri-v2-desktop-framework.md  002-obsidian-vault-storage.md  003-openai-digest-summarization.md  004-macos-keychain-secrets.md  README.md
.github/workflows/: ci.yml  release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  index.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/AppIcon.icon/: icon.json
src-tauri/scripts/: inject-icon-variants.sh
src-tauri/src/: claude_mcp.rs  config.rs  digest.rs  discord.rs  keychain.rs  lib.rs  openai.rs  scheduler.rs  vault.rs  vite-env.d.ts
src-tauri/src/assets/: loader.lottie
src-tauri/src/commands/: claude_mcp.rs  digest.rs  discord.rs  mod.rs  reports.rs  schedule.rs
src-tauri/src/connectors/: confluence.rs  discord_reader.rs  github.rs  gitlab.rs  jira.rs  mcp.rs  mod.rs
src/assets/: loader.json
src/components/: ApprovalDialog.tsx  CommandPalette.tsx  MarkdownEditor.tsx  MarkdownPreview.tsx  PlatformIcon.tsx  Sidebar.tsx  StatusBadge.tsx  Toast.tsx  Toolbar.tsx  UpdateToast.tsx
src/hooks/: useNavigationHistory.ts  useToast.ts
src/lib/: dates.ts  tauri.ts  types.ts  updater.ts
src/pages/: Dashboard.tsx  Digest.tsx  ReportEditor.tsx  (+2 more)
(+17 files in other folders)
