[package]
name = "reportly"
version = "0.1.0"
description = "Reportly - Manage and send daily reports to Discord"
authors = ["Nicholas Nogueira"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
security-framework = "3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tokio = { version = "1", features = ["time"] }
async-trait = "0.1"
base64 = "0.22"
tauri-plugin-updater = "2"
